--- a/SASPlanet.dproj
+++ b/SASPlanet.dproj
@@ -824,6 +824,7 @@
     <DCCReference Include="u_TileRequestResult.pas" />
     <DCCReference Include="u_TileStorageAbstract.pas" />
     <DCCReference Include="u_TileStorageBerkeleyDB.pas" />
+    <DCCReference Include="u_TileStorageBerkeleyDBHelper.pas" />
     <DCCReference Include="u_TileStorageFileSystem.pas" />
     <DCCReference Include="u_TileStorageGE.pas" />
     <DCCReference Include="u_TileStorageInfo.pas" />
