Продолжаю ковырять кэш Беркли

--- a/SASPlanet.dproj
+++ b/SASPlanet.dproj
@@ -61,6 +61,19 @@
     <DCCReference Include="c_SasVersion.pas" />
     <DCCReference Include="c_SensorsGUIDSimple.pas" />
     <DCCReference Include="c_TimeZones.pas" />
+    <DCCReference Include="ExtTileStorages\t_ETS_AuthFunc.pas" />
+    <DCCReference Include="ExtTileStorages\t_ETS_AuthKind.pas" />
+    <DCCReference Include="ExtTileStorages\t_ETS_List.pas" />
+    <DCCReference Include="ExtTileStorages\t_ETS_Provider.pas" />
+    <DCCReference Include="ExtTileStorages\t_ETS_Result.pas" />
+    <DCCReference Include="ExtTileStorages\t_ETS_Tiles.pas" />
+    <DCCReference Include="ExtTileStorages\t_ODBC.pas" />
+    <DCCReference Include="ExtTileStorages\u_DBMS_Basic.pas" />
+    <DCCReference Include="ExtTileStorages\u_DBMS_ODBC.pas" />
+    <DCCReference Include="ExtTileStorages\u_DBMS_provider.pas" />
+    <DCCReference Include="ExtTileStorages\u_ETS.pas" />
+    <DCCReference Include="ExtTileStorages\u_ETS_Path.pas" />
+    <DCCReference Include="ExtTileStorages\u_ETS_Tiles.pas" />
     <DCCReference Include="frm_About.pas">
       <Form>frmAbout</Form>
     </DCCReference>
@@ -825,6 +838,8 @@
     <DCCReference Include="u_TileStorageAbstract.pas" />
     <DCCReference Include="u_TileStorageBerkeleyDB.pas" />
     <DCCReference Include="u_TileStorageBerkeleyDBHelper.pas" />
+    <DCCReference Include="u_TileStorageBerkeleyDBRecParser.pas" />
+    <DCCReference Include="u_TileStorageDBMS.pas" />
     <DCCReference Include="u_TileStorageFileSystem.pas" />
     <DCCReference Include="u_TileStorageGE.pas" />
     <DCCReference Include="u_TileStorageInfo.pas" />
