--- a/SASPlanet.dproj
+++ b/SASPlanet.dproj
@@ -498,6 +498,9 @@
     <DCCReference Include="u_BackgroundTask.pas" />
     <DCCReference Include="u_BackgroundTaskLayerDrawBase.pas" />
     <DCCReference Include="u_BaseGridConfig.pas" />
+    <DCCReference Include="u_BitmapLayerProviderInPolygon.pas" />
+    <DCCReference Include="u_BitmapLayerProviderSimpleForCombine.pas" />
+    <DCCReference Include="u_BitmapLayerProviderWithBGColor.pas" />
     <DCCReference Include="u_BitmapMarker.pas" />
     <DCCReference Include="u_BitmapMarkerProviderChangeableFaked.pas" />
     <DCCReference Include="u_BitmapMarkerProviderSimpleArrow.pas" />
