--- a/SASPlanet.dproj
+++ b/SASPlanet.dproj
@@ -300,6 +300,7 @@
     <DCCReference Include="i_PolyLineLayerConfig.pas" />
     <DCCReference Include="i_ProjectionInfo.pas" />
     <DCCReference Include="i_ProxySettings.pas" />
+    <DCCReference Include="i_RegionProcessProgressInfo.pas" />
     <DCCReference Include="i_SatellitesInViewMapDraw.pas" />
     <DCCReference Include="i_ScaleLineConfig.pas" />
     <DCCReference Include="i_SearchResultPresenter.pas" />
@@ -500,6 +501,7 @@
     <DCCReference Include="u_BaseGridConfig.pas" />
     <DCCReference Include="u_BitmapLayerProviderByMarksSubset.pas" />
     <DCCReference Include="u_BitmapLayerProviderInPolygon.pas" />
+    <DCCReference Include="u_BitmapLayerProviderMapWithLayer.pas" />
     <DCCReference Include="u_BitmapLayerProviderSimpleForCombine.pas" />
     <DCCReference Include="u_BitmapLayerProviderWithBgColor.pas" />
     <DCCReference Include="u_BitmapMarker.pas" />
@@ -762,6 +764,7 @@
     <DCCReference Include="u_ProjectedSingleLine.pas" />
     <DCCReference Include="u_ProjectionInfo.pas" />
     <DCCReference Include="u_ProxyConfig.pas" />
+    <DCCReference Include="u_RegionProcessProgressInfo.pas" />
     <DCCReference Include="u_ResStrings.pas" />
     <DCCReference Include="u_SASMainConfigProvider.pas" />
     <DCCReference Include="u_SatellitesInViewMapDrawSimple.pas" />
