--- a/SASPlanet.dproj
+++ b/SASPlanet.dproj
@@ -243,6 +243,7 @@
     <DCCReference Include="i_LayerBitmapClearStrategy.pas" />
     <DCCReference Include="i_LineOnMapEdit.pas" />
     <DCCReference Include="i_LocalCoordConverter.pas" />
+    <DCCReference Include="i_LocalCoordConverterChangeable.pas" />
     <DCCReference Include="i_LocalCoordConverterFactorySimpe.pas" />
     <DCCReference Include="i_LogForTaskThread.pas" />
     <DCCReference Include="i_LogSimple.pas" />
@@ -517,6 +518,7 @@
     <DCCReference Include="u_BitmapPostProcessingConfigStatic.pas" />
     <DCCReference Include="u_CalcLineLayerConfig.pas" />
     <DCCReference Include="u_CenterScaleConfig.pas" />
+    <DCCReference Include="u_ChangeableBase.pas" />
     <DCCReference Include="u_CommonFormAndFrameParents.pas" />
     <DCCReference Include="u_ConfigDataElementBase.pas" />
     <DCCReference Include="u_ConfigDataElementComplexBase.pas" />
